--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,14 +1,31 @@
 .app {
     background: #f1f1f1;
-    display: grid;  
+    display: grid;
     font-family: Arial, Helvetica, sans-serif;
+    grid-template-areas:
+        "cabecalho"
+        "conteudo"
+        "rodape";
+    grid-template-columns: auto;
+    grid-template-rows: 50px auto auto;
+    /*
+        Altura linha cabeçalho: 50px
+        Altura linha conteúdo: automático
+        Altura linha rodapé: automático
+    */
 }
 
 .cabecalho {
+    background: #00cc99;
+    grid-area: cabecalho;
 }
  
 .conteudo {
+    background: #ff8080;
+    grid-area: conteudo;
 }
 
 .rodape {
+    background: #0099ff;
+    grid-area: rodape;
 }
