--- a/assets/css/destaques.css
+++ b/assets/css/destaques.css
@@ -4,3 +4,41 @@
     grid-template-rows: 33.33% 33.33% 33.33%;
     height: calc(100vh - 50px);
 }
+
+.destaques__principal {
+    background: url('../img/fortnite.jpg') center / cover no-repeat;
+    /* grid-column-start: 1;
+    grid-column-end: 4; */
+    grid-column: 1 / 4;
+    /* grid-row-start: 1;
+    grid-row-end: 3; */
+    grid-row: 1 / 3;
+}
+
+.destaques__secundario:nth-child(2) {
+    background: url('../img/pubg.jpg') center / cover no-repeat;
+    /* grid-column-start: 4;
+    grid-column-end: 4; */
+    grid-column: 4 / 4;
+    /* grid-row-start: 1;
+    grid-row-end: 1; */
+    grid-row: 1 / 1;
+}
+
+.destaques__secundario:nth-child(3) {
+    background: url('../img/slack.png') center / cover no-repeat;
+    grid-column: 4 / 4;
+    grid-row: 2 / 2;
+}
+
+.destaques__secundario:nth-child(4) {
+    background: url('../img/whatsapp.png') center / cover no-repeat;
+    grid-column: 4 / 4;
+    grid-row: 3 / 3;
+}
+
+.destaques__secundario:nth-child(5) {
+    background: url('../img/cs-go.jpg') center / cover no-repeat;
+    grid-column: 3 / 3;
+    grid-row: 3 / 3
+}
