Responsivo - Seção de populares

--- a/assets/css/responsivo.css
+++ b/assets/css/responsivo.css
@@ -13,6 +13,17 @@
         grid-column: none;
         grid-row: none;
     }
+
+    .populares__conteudo {
+        flex-direction: column;
+    }
+
+    .populares__card {
+        grid-template-rows: 150px auto;
+        margin-bottom: 3rem;
+        margin-right: 0;
+        width: 100%;
+    }
 }
 
 /* Tablets */
@@ -51,14 +62,31 @@
         grid-column: 3 / 3;
         grid-row: 3 / 3;
     }
+
+    .populares__conteudo {
+        flex-direction: row;
+    }
+
+    .populares__card {
+        grid-template-rows: 173px auto;
+        margin-bottom: 3rem;
+        margin-right: 1rem;
+        width: calc(50% - 1rem);
+    }
 }
 
 /* PC's antigos */
 @media screen and (min-width: 992px) {
-
+    .populares__card {
+        margin-bottom: 3rem;
+        width: calc(33.33% - 1rem);
+    }
 }
 
 /* PC's novos e telas maiores */
 @media screen and (min-width: 1200px) {
-    
+    .populares__card {
+        margin-bottom: 0;
+        width: calc(20% - 1rem);
+    }
 }
